Add agent service account auth
